[tool.poetry]
name = "grpc-in-python"
version = "0.1.0"
description = "gRPC in Python"
license = "MIT"
authors = ["Juan Pablo Cadena Aguilar <jpcadena@espol.edu.ec>"]
maintainers = ["Juan Pablo Cadena Aguilar <jpcadena@espol.edu.ec>"]
readme = "README.md"
homepage = "https://github.com/jpcadena/grpc-in-python"
repository = "https://github.com/jpcadena/grpc-in-python"
documentation = "https://github.com/jpcadena/grpc-in-python"
keywords = [
    "python",
    "grpc",
    "poetry",
    "ruff",
    "isort",
    "black-formatter",
    "mypy",
    "solid-principles",
    "clean-code",
    "design-patterns"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Spanish",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Internet Phone",
    "Topic :: Documentation",
    "Topic :: File Formats",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: CVS",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Typing :: Typed",
]
packages = [{include = "grpc_in_python"}]

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.13.2"
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest = "^8.0.0"
google-api-python-client = "^2.116.0"
grpcio = "^1.60.1"
grpcio-reflection = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.2"
types-protobuf = "^4.24.0.20240129"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[tool.poetry.urls]
"gRPC in Python" = "https://github.com/jpcadena/grpc-in-python"

[tool.isort]
atomic = true
skip_gitignore = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
profile = "black"

[tool.black]
line-length = 80
target-version = ["py311"]
exclude = '''
(
    /(\.venv
  | \.mypy_cache
  | \.ruff_cache
  | \.pytest_cache
  | cache
  | venv
  | tests)/
  | .*_pb2\\.py$
  | .*_pb2_grpc\\.py$
)
'''
skip-string-normalization = true

[tool.ruff]
select = ["E", "F"]
ignore = []
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".pytest_cache",
    "cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".*_pb2\\.py$",
    ".*_pb2_grpc\\.py$"
]
line-length = 80
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ".venv|venv|tests|cache|.mypy_cache|.ruff_cache|.pytest_cache|.*_pb2\\.py$|.*_pb2_grpc\\.py$"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
implicit_reexport = false
strict_optional = true
strict_equality = true
follow_imports = "silent"
no_implicit_reexport = true
ignore_missing_imports = true

[tool.mypy-tests]
ignore_errors = true

[tool.bandit]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.poetry.scripts]
test = "pytest"

[tool.pytest]
addopts = [
    "-rxXs",             # Display extra info for test failures
    "--strict-config",   # Enforce strict pytest configuration
    "--strict-markers",  # Enforce strict markers
    "--ignore=docs_src", # Ignore the 'docs_src' directory
]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
    'ignore:starlette.middleware.wsgi is deprecated and will be removed in a future release\..*:DeprecationWarning:starlette',
    "ignore:'cgi' is deprecated:DeprecationWarning",
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    "ignore:You seem to already have a custom.*:RuntimeWarning:trio",
    "ignore::trio.TrioDeprecationWarning",
    'ignore::pytest.PytestDeprecationWarning:pytest_cov',
]
